* Force Element.extend() to skip XML nodes to avoid errors in IE, use the static Element methods instead. Closes #9709. [jddalton, yanick.rochon]

* Fix IE issue with Element#replace() removing the childNodes of the returned element. Closes #11225. [Rukawa, jddalton]

* Ensure Element#getStyle returns values in px unit, regardless of how they are set. [Andrew Dupont, jddalton]

* Fixed IE error in the Selector class that caused matching element ids to fail when the element wasn't attached to the document. Closes #9766. [jddalton, kangax, shazam]

* Ensure tagName selectors return an array and not a nodeList. [jddalton]

* Make Object.isNumber return false for NaN, -infinity, and +infinity. Closes #10595. [foca, kangax]

* Fix Object.isHash throwing error when passed undefined variable in IE. [Viktor Kojouharov, jddalton]

* Fix issue where Ajax.Request does not work with local files in IE7. Closes #8259. [hagen.seifert, jddalton]

* Ensure Array#intersect returns correct result if intersect value is 0. [jddalton]

* Preserve inline display styles when showing/hiding an element. Closes #3868. [anonymous, Tobie Langel]

* Allow query parameters for any HTTP method. Closes #11009. [cfis, jddalton]

* Form.Element.getValue should return null on unknown/unsupported elements. Closes #8381. [jddalton, tdd]

* Ensure Element.hide and Element.show return an element, even if you pass an element ID. [jddalton]

* Fix issue where setting type attribute for button element in Element constructor fails in IE. Closes #10548. [jddalton, sakarit]

* Ensure IE el.readAttribute('id') behaves properly when child element has id="id" or name="id". Closes #11092. [#89 state:resolved] [jddalton]  

* Stop Form.Element.disable from stealing focus. Closes #11214. [kangax, sjoekie]

* Ensure String#escapeHTML escapes double quotes. Closes #10622. [kangax]

* Fix String#escapeHTML and String#unescapeHTML to ensure more consistent output. Closes #8452. [jddalton, slusarz, Tobie Langel)
